# codex-test

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
docs/: core-spec-v0.1.md
domain/example_domain/: manifest.yaml  policies.yaml
domain/example_domain/schemas/: firecrawl_crawl_input.json  firecrawl_crawl_output.json
gateway/: Dockerfile
gateway/src/: main.py  manifest.py  models.py  policy.py  schemas.py
tests/: test_firecrawl_client_error_mapping.py  test_firecrawl_worker_contract.py  test_gateway_run_tool.py  test_integration_smoke.py  test_manifest_loading.py
tools/firecrawl/: Dockerfile
tools/firecrawl/src/: api.py  firecrawl_client.py
